fix a problem due to which the modal search results were hiding behind..

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,12 +45,12 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 1051 !important;
   float: left;
   display: none;
   min-width: 160px;
   _width: 160px;
-  padding: 10px;
+  padding: 4px 0;
   margin: 2px 0 0 0;
   list-style: none;
   background-color: #ffffff;
@@ -58,9 +58,9 @@
   border-color: rgba(0, 0, 0, 0.2);
   border-style: solid;
   border-width: 1px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
@@ -69,8 +69,8 @@
   background-clip: padding-box;
   *border-right-width: 2px;
   *border-bottom-width: 2px;
- 
-  .ui-menu-item > a.ui-corner-all {
+}
+.ui-menu-item > a.ui-corner-all {
     display: block;
     padding: 3px 15px;
     clear: both;
@@ -78,29 +78,20 @@
     line-height: 18px;
     color: #555555;
     white-space: nowrap;
-    border-color: rgba(0, 0, 0, 0.2);
-      border-style: solid;
-      border-width: 1px;
-      border-radius: 0px;
-
-    &.ui-state-hover, &.ui-state-active {
+    text-decoration: none;
+}
+.ui-state-hover, .ui-state-active {
       color: #ffffff;
       text-decoration: none;
-      background-color: #ff0000;
-      border-color: rgba(0, 0, 0, 0.2);
-      border-style: solid;
-      border-width: 1px;
-  
+      background-color: #0088cc;
       border-radius: 0px;
-
       -webkit-border-radius: 0px;
       -moz-border-radius: 0px;
       background-image: none;
-    }
-  }
 }
-
-
+#modalIns{
+    width: 500px;
+}
 /* for vertical caraosel*/
 
 
@@ -298,6 +289,3 @@ input::-moz-focus-inner { border: 0; }
   border-radius: 50%;
 }
 
-#modalIns{
-    width: 500px;
-}
